--- a/tire-catalog/views/tire_brand.xml
+++ b/tire-catalog/views/tire_brand.xml
@@ -34,7 +34,7 @@
                     <t t-name="kanban-box">
                         <div class="oe_kanban_vignette oe_semantic_html_override">
                             <a type="open" href="#" class="o_kanban_image oe_kanban_action">
-                                <img t-att-src="kanban_image('tire_catalog.tire_brand', 'image_small', record.id.raw_value)" class="img-responsive" style="width:100px;"/>
+                                <img t-att-src="kanban_image('tire-catalog.tire_brand', 'image_small', record.id.raw_value)" class="img-responsive" style="width:100px;"/>
                             </a>
                             <div class="oe_kanban_details">
                                 <h4 class="oe_partner_heading">
