vehicles button client

--- a/car-workshop/views/inherit_fleet_vehicle.xml
+++ b/car-workshop/views/inherit_fleet_vehicle.xml
@@ -36,7 +36,7 @@
                     </div>
                     <group col="2" string="General Properties">
                         <group>
-                            <field name="customer_id"/>
+                            <field name="customer_id" domain="[('customer','=',1)]"/>
                             <field name="location"/>
                             <field name="vin_sn"/>
                             <field name="model_year"/>                            
