--- a/car-workshop/views/inherit_res_partner.xml
+++ b/car-workshop/views/inherit_res_partner.xml
@@ -6,7 +6,14 @@
             <field name="name">Vehicles</field>
             <field name="res_model">fleet.vehicle</field>
             <field name="domain">[('customer_id', '=', active_id)]</field>
-            <field name="view_mode">kanban</field>
+            <field name="view_mode">kanban,form</field>
+            <field name="view_type">form</field>
+            <field name="view_ids"
+                   eval="[(5, 0, 0),
+                          (0, 0, {'view_mode': 'kanban', 'view_id': ref('car-workshop_fleet_vehicle_view_kanban')}),
+                          (0, 0, {'view_mode': 'form', 'view_id': ref('car-workshop_fleet_vehicle_view_form')})]"
+            />
+            <field name="target">current</field>
         </record>
 
         <record id="partner_repairs" model="ir.actions.act_window">
