--- a/car-workshop/views/inherit_res_partner.xml
+++ b/car-workshop/views/inherit_res_partner.xml
@@ -20,6 +20,14 @@
             <field name="name">Repairs</field>
             <field name="res_model">car_workshop.repair</field>
             <field name="domain">[('partner_id', '=', active_id)]</field>
+            <field name="view_mode">kanban,form</field>
+            <field name="view_type">form</field>
+            <field name="view_ids"
+                   eval="[(5, 0, 0),
+                          (0, 0, {'view_mode': 'kanban', 'view_id': ref('car-workshop_repair_view_kanban')}),
+                          (0, 0, {'view_mode': 'form', 'view_id': ref('car-workshop_repair_view_form')})]"
+            />
+            <field name="target">current</field>
         </record>
 
         <record id="view_partner_form" model="ir.ui.view">
