--- a/car-workshop/views/inherit_fleet_vehicle.xml
+++ b/car-workshop/views/inherit_fleet_vehicle.xml
@@ -2,6 +2,20 @@
 <odoo>
     <data>
 
+        <record id="vehicle_repairs" model="ir.actions.act_window">
+            <field name="name">Repairs</field>
+            <field name="res_model">car_workshop.repair</field>
+            <field name="domain">[('vehicle_id', '=', active_id)]</field>
+            <field name="view_mode">kanban,form</field>
+            <field name="view_type">form</field>
+            <field name="view_ids"
+                   eval="[(5, 0, 0),
+                          (0, 0, {'view_mode': 'kanban', 'view_id': ref('car-workshop_repair_view_kanban')}),
+                          (0, 0, {'view_mode': 'form', 'view_id': ref('car-workshop_repair_view_form')})]"
+            />
+            <field name="target">current</field>
+        </record>
+
         <!-- NEW Form View Fleet Vehicle -->
         <record id='car-workshop_fleet_vehicle_view_form' model='ir.ui.view'>
             <field name="name">fleet.vehicle.form</field>
@@ -9,121 +23,133 @@
             <field name="priority">35</field>
             <field name="arch" type="xml">
                 <form string="Vehicle">
-                <sheet>
-                    <div class="oe_button_box" name="button_box">
-                        <button name="return_action_to_open" type="object" class="oe_stat_button" icon="fa-wrench" context="{'xml_id':'fleet_vehicle_log_services_action'}" help="show the services logs for this vehicle">
-                            <field name="service_count" widget="statinfo" string="Services"/>
-                        </button>
-                        <button name="return_action_to_open" type="object" class="oe_stat_button" icon="fa-tachometer" context="{'xml_id':'fleet_vehicle_odometer_action'}" help="show the odometer logs for this vehicle">
-                            <field name="odometer_count" widget="statinfo" string="Odometer"/>
-                        </button>
-                        <button name="toggle_active" type="object" class="oe_stat_button" icon="fa-archive">
-                            <field name="active" widget="boolean_button" options="{&quot;terminology&quot;: &quot;archive&quot;}"/>
-                        </button>
+                    <sheet>
+                        <div class="oe_button_box" name="button_box">
+                            <button class="oe_stat_button" type="action" icon="fa-wrench"
+                                    name="%(car-workshop.vehicle_repairs)d" help="Repairs related with this contact">
+                                <field string="Repairs" name="repairs_count" widget="statinfo"/>
+                            </button>
+                            <button name="return_action_to_open" type="object" class="oe_stat_button"
+                                    icon="fa-tachometer" context="{'xml_id':'fleet_vehicle_odometer_action'}"
+                                    help="show the odometer logs for this vehicle">
+                                <field name="odometer_count" widget="statinfo" string="Odometer"/>
+                            </button>
+                            <button name="toggle_active" type="object" class="oe_stat_button" icon="fa-archive">
+                                <field name="active" widget="boolean_button"
+                                       options="{&quot;terminology&quot;: &quot;archive&quot;}"/>
+                            </button>
+                        </div>
+                        <field name="image_client_vehicle" widget="image" class="oe_avatar"/>
+                        <div class="oe_title">
+                            <label for="model_id" class="oe_edit_only"/>
+                            <h1>
+                                <field name="model_id" placeholder="e.g. Model S"/>
+                            </h1>
+                            <label for="license_plate" class="oe_edit_only"/>
+                            <h2>
+                                <field name="license_plate" class="oe_inline" placeholder="e.g. PAE 326"/>
+                            </h2>
+                            <label for="tag_ids" class="oe_edit_only"/>
+                            <field name="tag_ids" widget="many2many_tags"
+                                   options="{'color_field': 'color', 'no_create_edit': True}"/>
+                        </div>
+                        <group col="2" string="General Properties">
+                            <group>
+                                <field name="customer_id" domain="[('customer','=',1)]"/>
+                                <field name="location"/>
+                                <field name="vin_sn"/>
+                                <field name="model_year"/>
+                                <field name="company_id" groups="base.group_multi_company"/>
+                                <field name="driver_id"/>
+                            </group>
+                            <group>
+                                <label for="odometer"/>
+                                <div class="o_row">
+                                    <field name="odometer"/>
+                                    <field name="odometer_unit"/>
+                                </div>
+                                <field name="acquisition_date"/>
+                                <field name="car_value"/>
+                                <field name="residual_value"/>
+                            </group>
+                        </group>
+                        <group col="2">
+                            <group string="Additional Properties">
+                                <field name="seats"/>
+                                <field name="doors"/>
+                                <field name="color"/>
+                            </group>
+                            <group string="Engine Options">
+                                <field name="transmission"/>
+                                <field name="fuel_type"/>
+                                <label for="co2"/>
+                                <div class="o_row" name="co2">
+                                    <field name="co2"/>
+                                    <span>g/km</span>
+                                </div>
+                                <field name="horsepower"/>
+                                <field name="horsepower_tax"/>
+                                <label for="power"/>
+                                <div class="o_row">
+                                    <field name="power"/>
+                                    <span>kW</span>
+                                </div>
+                            </group>
+                        </group>
+                    </sheet>
+                    <div class="oe_chatter">
+                        <field name="message_follower_ids" widget="mail_followers"/>
+                        <field name="message_ids" widget="mail_thread" options="{&quot;thread_level&quot;: 1}"/>
                     </div>
-                    <field name="image_client_vehicle" widget="image" class="oe_avatar"/>
-                    <div class="oe_title">
-                        <label for="model_id" class="oe_edit_only"/>
-                        <h1>
-                            <field name="model_id" placeholder="e.g. Model S"/>
-                        </h1>
-                        <label for="license_plate" class="oe_edit_only"/>
-                        <h2>
-                            <field name="license_plate" class="oe_inline" placeholder="e.g. PAE 326"/>
-                        </h2>
-                        <label for="tag_ids" class="oe_edit_only"/>
-                        <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color', 'no_create_edit': True}"/>
-                    </div>
-                    <group col="2" string="General Properties">
-                        <group>
-                            <field name="customer_id" domain="[('customer','=',1)]"/>
-                            <field name="location"/>
-                            <field name="vin_sn"/>
-                            <field name="model_year"/>                            
-                            <field name="company_id" groups="base.group_multi_company"/>
-                            <field name="driver_id"/>
-                        </group>
-                        <group>
-                            <label for="odometer"/>
-                            <div class="o_row">
-                                <field name="odometer"/>
-                                <field name="odometer_unit"/>
-                            </div>
-                            <field name="acquisition_date"/>
-                            <field name="car_value"/>
-                            <field name="residual_value"/>
-                        </group>
-                    </group>
-                    <group col="2">
-                        <group string="Additional Properties">
-                            <field name="seats"/>
-                            <field name="doors"/>
-                            <field name="color"/>
-                        </group>
-                        <group string="Engine Options">
-                            <field name="transmission"/>
-                            <field name="fuel_type"/>
-                            <label for="co2"/>
-                            <div class="o_row" name="co2">
-                                <field name="co2"/><span>g/km</span>
-                            </div>
-                            <field name="horsepower"/>
-                            <field name="horsepower_tax"/>
-                            <label for="power"/>
-                            <div class="o_row">
-                                <field name="power"/><span>kW</span>
-                            </div>
-                        </group>
-                    </group>
-                </sheet>
-                <div class="oe_chatter">
-                    <field name="message_follower_ids" widget="mail_followers"/>
-                    <field name="message_ids" widget="mail_thread" options="{&quot;thread_level&quot;: 1}"/>
-                </div>
-            </form>
+                </form>
             </field>
         </record>
 
         <record id='car-workshop_fleet_vehicle_view_kanban' model='ir.ui.view'>
-        <field name="name">fleet.vehicle.kanban</field>
-        <field name="model">fleet.vehicle</field>
-        <field name="priority">35</field>
+            <field name="name">fleet.vehicle.kanban</field>
+            <field name="model">fleet.vehicle</field>
+            <field name="priority">35</field>
             <field name="arch" type="xml">
-            <kanban>
-                <field name="license_plate" />
-                <field name="model_id" />
-                <field name="driver_id" />
-                <field name="location" />
-                <field name="state_id" />
-                <field name="id" />
-                <field name="image_client_vehicle" />
-                <field name="tag_ids" />
+                <kanban>
+                    <field name="license_plate"/>
+                    <field name="model_id"/>
+                    <field name="driver_id"/>
+                    <field name="location"/>
+                    <field name="state_id"/>
+                    <field name="id"/>
+                    <field name="image_client_vehicle"/>
+                    <field name="tag_ids"/>
 
-                <templates>
-                    <t t-name="kanban-box">
-                        <div class="oe_kanban_global_click">
-                            <div class="o_kanban_image">
-                                <img t-att-src="kanban_image('fleet.vehicle', 'image_client_vehicle', record.id.raw_value)"/>
-                            </div>
-                            <div class="oe_kanban_details">
-                                <strong class="o_kanban_record_title">
-                                    <field name="license_plate"/> : <field name="model_id"/>
-                                </strong>
-                                <div class="o_kanban_tags_section">
-                                    <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                    <templates>
+                        <t t-name="kanban-box">
+                            <div class="oe_kanban_global_click">
+                                <div class="o_kanban_image">
+                                    <img t-att-src="kanban_image('fleet.vehicle', 'image_client_vehicle', record.id.raw_value)"/>
                                 </div>
-                                <ul>
-                                    <li>
-                                        <t t-if="record.customer_id.raw_value"><field name="customer_id"/></t>
-                                    </li>
-                                </ul>
+                                <div class="oe_kanban_details">
+                                    <strong class="o_kanban_record_title">
+                                        <field name="license_plate"/>
+                                        :
+                                        <field name="model_id"/>
+                                    </strong>
+                                    <div class="o_kanban_tags_section">
+                                        <field name="tag_ids" widget="many2many_tags"
+                                               options="{'color_field': 'color'}"/>
+                                    </div>
+                                    <ul>
+                                        <li>
+                                            <t t-if="record.customer_id.raw_value">
+                                                <field name="customer_id"/>
+                                            </t>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
-                        </div>
-                    </t>
-                </templates>
-            </kanban>
-        </field>
-    </record>
+                        </t>
+                    </templates>
+                </kanban>
+            </field>
+        </record>
 
         <!--Action Vehicles Menu-->
         <record model="ir.actions.act_window" id="action_car_vehicles_config">
