--- a/car-workshop/views/inherit_project_project.xml
+++ b/car-workshop/views/inherit_project_project.xml
@@ -123,7 +123,9 @@
         <!--Project Menu-->
         <menuitem id="car_areas_menu" name="Areas"
                   parent="main_car_workshop_menu"
-                  sequence="1" action="action_car_areas_menu"/>
+                  sequence="1"
+                  action="action_car_areas_menu"
+        />
 
     </data>
 </odoo>
