--- a/car-workshop/views/repair.xml
+++ b/car-workshop/views/repair.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
+
+
+
         <!-- Project Repair Form View -->
         <record id="car-workshop_repair_view_form" model="ir.ui.view">
             <field name="name">car-workshop.repair.form</field>
@@ -58,7 +61,7 @@
                                     attrs="{'invisible': [('delivery_count', '=', 0)]}" groups="base.group_user">
                                 <field name="delivery_count" widget="statinfo" string="Delivery"/>
                             </button>
-                            <button name="admission_sheet" type="object" class="oe_stat_button"
+                            <button name="action_admission_sheet" type="object" class="oe_stat_button"
                                     icon="fa-info-circle" string="Admission Sheet">
                             </button>
                             <button name="action_finised" type="object" class="oe_stat_button" icon="fa-archive">
